--- a/css/laptop.css
+++ b/css/laptop.css
@@ -41,24 +41,24 @@
     border-right: 1px solid #ddd;
   }
 
-
   .navbar {
     display: flex;
     align-items: stretch;
     justify-content: center;
-    padding: 0;
     height: 60px;
+    padding: 0px;
   }
 
   .nav-item {
     border-left: 1px solid #ddd;
-    width: 100px;
+    width: 120px;
     padding: 10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-size: 12px;
+    height: 100%;
   }
 
   .nav-item:hover {
@@ -73,10 +73,11 @@
     width: 300px;
     text-align: center;
     padding: 10px;
+    height: 100%;
   }
 
   .name {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .titler {
@@ -335,11 +336,17 @@
     border-right: 1px solid #d6c08d;
   }
 
+  .cert-section {
+    background-color: #f3f3f3;
+    margin-bottom: 20px;
+  }
+
   .container {
     background-color: #f3f3f3;
     padding-bottom: 50px;
     padding-top: 30px;
   }
+
   .certificates {
     max-width: 1060px;
     margin: 0 auto;
@@ -424,14 +431,6 @@
   .box1 img {
     max-width: 340px;
     height: auto;
-  }
-
-  .cv-table {
-    width: 100%;
-    max-width: 600px;
-    border-collapse: collapse;
-    opacity: 0.7;
-    font-size: 12px;
   }
 
   .cv-table td {
